--- a/20240226/2_2_network_analysis_graph.ipynb
+++ b/20240226/2_2_network_analysis_graph.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "# 파일 불러오기\n",
-    "with open('../data/df.pkl', 'rb') as f:\n",
+    "with open('../../data/df.pkl', 'rb') as f:\n",
     "    df = pickle.load(f)\n"
    ]
   },
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "# 파일 불러오기\n",
-    "with open('../data/df_qna.pkl', 'rb') as f:\n",
+    "with open('../../data/df_qna.pkl', 'rb') as f:\n",
     "    df_qna = pickle.load(f)"
    ]
   },
@@ -107,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2023-11-03 00:03:41.097000')"
+       "Timestamp('2023-08-03 01:04:49.693000')"
       ]
      },
      "execution_count": 4,
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40292 43274\n"
+      "11392 11996\n"
      ]
     }
    ],
@@ -234,9 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<networkit.centrality.CoreDecomposition at 0x2c9f30be0>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "coreDec = nk.centrality.CoreDecomposition(github_nk)\n",
     "coreDec.run()\n",
@@ -246,17 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# nk.gephi.pyclient.GephiClient(url='http://116.45.16.200:5999/workspace0', autoflush=False)\n",
-    "gsc = nk.gephi.streaming.GephiStreamingClient(url='http://116.45.16.200:5999/workspace1')\n"
+    "# gsc = nk.gephi.streaming.GephiStreamingClient(url='http://116.45.16.200:5999/workspace1')\n",
+    "# gsc = nk.gephi.streaming.GephiStreamingClient(url='http://143.248.106.43:7777/workspace1')\n",
+    "gsc = nk.gephi.streaming.GephiStreamingClient(url='http://143.248.106.43:7777/workspace2')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test.exportGraph(di_github_nk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -288,16 +310,57 @@
     }
    ],
    "source": [
-    "test.exportGraph(di_github_nk)"
+    "gsc.exportGraph(di_github_nk)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gsc.exportGraph(di_github_nk)"
+    "# nk.vizbridges.widgetFromGraph(github_nk, dimension = nk.vizbridges.Dimension.Two, nodeScores = coreDec.scores())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<networkit.graph.Graph at 0x2c9e8d630>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "di_github_nk\n",
+    "# 1762"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2376954"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(di_github.nodes())[1762]"
    ]
   },
   {
@@ -305,9 +368,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# nk.vizbridges.widgetFromGraph(github_nk, dimension = nk.vizbridges.Dimension.Two, nodeScores = coreDec.scores())"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
