--- a/python/0_data_extract.ipynb
+++ b/python/0_data_extract.ipynb
@@ -849,6 +849,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# user별 question/answer count를 가지고 있는 데이터\n",
+    "with open('../../data/python_node.pkl', 'wb') as f:\n",
+    "    pickle.dump(node, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# user별 question/answer count를 가지고 있는 데이터\n",
+    "with open('../../data/python_edgelist.pkl', 'wb') as f:\n",
+    "    pickle.dump(edgelist, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
