--- a/bert/1_test.ipynb
+++ b/bert/1_test.ipynb
@@ -4,9 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://zerojsh00.github.io/posts/BERTopic/\n",
     "https://towardsdatascience.com/topic-modeling-with-bert-779f7db187e6\n",
     "https://arxiv.org/pdf/2203.05794.pdf"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
