--- a/bert/2_test.ipynb
+++ b/bert/2_test.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "https://zerojsh00.github.io/posts/BERTopic/\n",
     "https://towardsdatascience.com/topic-modeling-with-bert-779f7db187e6\n",
-    "https://arxiv.org/pdf/2203.05794.pdf"
+    "https://arxiv.org/pdf/2203.05794.pdf\n",
+    "\n",
+    "https://dacon.io/competitions/official/235900/codeshare?page=1&dtype=recent&ptype=pub&keyword="
    ]
   },
   {
@@ -169,13 +171,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lk/t243gzpx379bzd9mvx8dcsmm0000gp/T/ipykernel_5535/1671787946.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/lk/t243gzpx379bzd9mvx8dcsmm0000gp/T/ipykernel_14597/1671787946.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_qna.loc[:, 'q_prep_text'] = df_qna['q_text'].apply(cleanhtml)\n",
-      "/var/folders/lk/t243gzpx379bzd9mvx8dcsmm0000gp/T/ipykernel_5535/1671787946.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/lk/t243gzpx379bzd9mvx8dcsmm0000gp/T/ipykernel_14597/1671787946.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +384,7 @@
        "list"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,45 +447,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cslab/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer, AutoModel\n",
     "import torch\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/codebert-base\")\n",
-    "embedding_model = AutoModel.from_pretrained(\"microsoft/codebert-base\")\n",
-    "\n",
-    "\n",
-    "code_tokens=tokenizer.tokenize(df_q_src['q_prep_text_non'].to_list()[0])\n",
-    "\n",
-    "tokens=[tokenizer.cls_token]+[tokenizer.sep_token]+code_tokens+[tokenizer.eos_token]\n",
-    "\n",
-    "tokens_ids=tokenizer.convert_tokens_to_ids(tokens)\n",
-    "\n",
-    "embeddings=embedding_model(torch.tensor(tokens_ids)[None,:])[0]\n",
-    "\n",
-    "embeddings = embeddings.reshape(-1,768)"
+    "embedding_model = AutoModel.from_pretrained(\"microsoft/codebert-base\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code_tokens=tokenizer(df_q_src['q_prep_text_non'].to_list()[0:1])\n",
+    "tokens_ids=tokenizer.convert_tokens_to_ids(code_tokens)\n",
+    "embeddings=embedding_model(torch.tensor(tokens_ids)[None,:])[0]\n",
+    "# embeddings = embeddings.reshape(-1,768)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code_tokens=tokenizer.tokenize(df_q_src['q_prep_text_non'].to_list()[1])\n",
+    "# tokens_ids=tokenizer.convert_tokens_to_ids(code_tokens)\n",
+    "# embeddings1 =embedding_model(torch.tensor(tokens_ids)[None,:])[0]\n",
+    "# embeddings1 = embeddings1.reshape(1,768, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Tensor"
+       "Encoding(num_tokens=257, attributes=[ids, type_ids, tokens, offsets, attention_mask, special_tokens_mask, overflowing])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(embeddings)"
+    "code_tokens[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 768, 12])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "stack expects each tensor to be equal size, but got [1, 768, 255] at entry 0 and [1, 768, 12] at entry 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43membeddings\u001b[49m\u001b[43m,\u001b[49m\u001b[43membeddings1\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#[M, 2, N, K]\u001b[39;00m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: stack expects each tensor to be equal size, but got [1, 768, 255] at entry 0 and [1, 768, 12] at entry 1"
+     ]
+    }
+   ],
+   "source": [
+    "output = torch.stack([embeddings,embeddings1], dim=1) #[M, 2, N, K]"
    ]
   },
   {
@@ -495,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +627,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "type(embeddings)\n",
+    "\n",
+    "# Convert the tensor to a NumPy array\n",
+    "embeddings_numpy = embeddings.detach().numpy()\n",
+    "print(type(embeddings_numpy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +658,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[70], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m embeddings\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mnumpy()\n\u001b[0;32m----> 2\u001b[0m topics, probs \u001b[38;5;241m=\u001b[39m \u001b[43mtopic_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit_transform\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43membeddings\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m topics, probs \u001b[38;5;241m=\u001b[39m \u001b[43mtopic_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit_transform\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43membeddings_numpy\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/bertopic/_bertopic.py:374\u001b[0m, in \u001b[0;36mBERTopic.fit_transform\u001b[0;34m(self, documents, embeddings, images, y)\u001b[0m\n\u001b[1;32m    372\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m documents \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    373\u001b[0m     check_documents_type(documents)\n\u001b[0;32m--> 374\u001b[0m     \u001b[43mcheck_embeddings_shape\u001b[49m\u001b[43m(\u001b[49m\u001b[43membeddings\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdocuments\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    376\u001b[0m doc_ids \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(documents)) \u001b[38;5;28;01mif\u001b[39;00m documents \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(images))\n\u001b[1;32m    377\u001b[0m documents \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDocument\u001b[39m\u001b[38;5;124m\"\u001b[39m: documents,\n\u001b[1;32m    378\u001b[0m                           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m\"\u001b[39m: doc_ids,\n\u001b[1;32m    379\u001b[0m                           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTopic\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    380\u001b[0m                           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImage\u001b[39m\u001b[38;5;124m\"\u001b[39m: images})\n",
       "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/bertopic/_utils.py:55\u001b[0m, in \u001b[0;36mcheck_embeddings_shape\u001b[0;34m(embeddings, docs)\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m embeddings\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(docs):\n\u001b[0;32m---> 55\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMake sure that the embeddings are a numpy array with shape: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     56\u001b[0m                          \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(len(docs), vector_dim) where vector_dim is the dimensionality \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     57\u001b[0m                          \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mof the vector embeddings. \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mValueError\u001b[0m: Make sure that the embeddings are a numpy array with shape: (len(docs), vector_dim) where vector_dim is the dimensionality of the vector embeddings. "
@@ -580,55 +666,78 @@
     }
    ],
    "source": [
-    "topics, probs = topic_model.fit_transform(src, embeddings)"
+    "topics, probs = topic_model.fit_transform(src, embeddings_numpy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"import hashlib  user_hash_dict = {}  with open('common_passwords.txt','r' ) as f:     common_passwords = f.read().splitlines()  with open('user_hash.txt', 'r') as f:     text = f.read().splitlines()     for user_hash in text:         username = user_hash.split(&quot;:&quot;)[0]         hash = user_hash.split(&quot;:&quot;)[1]         user_hash_dict[username] = hash  for password in common_passwords:     hashed_password = hashlib.sha256(password.encode('utf-8')).hexdigest()     for username , hash in user_hash_dict.items():         if hashed_password == hash:             print(f'hash found\\\\n{username}:{password}') \",\n",
-       " 'London:Alpha London London:Beta London:Delta Paris ',\n",
-       " 'London_sub:Alpha London_sub London_sub:Beta London_sub:Delta Paris_sub ',\n",
-       " \"names_df[0] = names_df[0] \\\\         .str.split(':') \\\\         .apply(lambda x: x[0] + '_sub') \\\\         .str.join(':') \",\n",
-       " 'L:o:n:d:o:n:_:s:u:b ',\n",
-       " \"names_df[0] = names_df[0]\\\\     .str.split(':')\\\\     .apply(lambda x: '_sub:'.join(x)) \",\n",
-       " '-v, -o, -A, --script, -Pn',\n",
-       " '-IL',\n",
-       " \"from sqlalchemy.orm import declarative_base, relationship from sqlalchemy import Column, String, Integer, ForeignKey  Base = declarative_base()  class Parent(Base):     __tablename__ = 'parents'          id = Column(Integer, primary_key=True)     name = Column(String(20))          children = relationship('Child', back_populates='parents')           class Child(Base):     __tablename__ = 'children'          id = Column(Integer, primary_key=True)     parent_id = Column(Integer, ForeignKey('parents.id'))     name = Column(String(20))      parents = relationship('Parent', back_populates='children')                 mother = Parent(id=1, name='Sarah') c1 = Child(id=22, parent_id=mother.id, name='Alice') c2 = Child(id=23, parent_id=mother.id, name='Bob')  print(mother.children) \",\n",
-       " '[] ']"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# embeddings.shape\n",
+    "\n",
+    "len(src)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"import hashlib  user_hash_dict = {}  with open('common_passwords.txt','r' ) as f:     common_passwords = f.read().splitlines()  with open('user_hash.txt', 'r') as f:     text = f.read().splitlines()     for user_hash in text:         username = user_hash.split(&quot;:&quot;)[0]         hash = user_hash.split(&quot;:&quot;)[1]         user_hash_dict[username] = hash  for password in common_passwords:     hashed_password = hashlib.sha256(password.encode('utf-8')).hexdigest()     for username , hash in user_hash_dict.items():         if hashed_password == hash:             print(f'hash found\\\\n{username}:{password}') \""
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "src"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings.shape[0] != len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained('microsoft/graphcodebert-base')\n",
+    "tokenizer.truncation_side = 'left' #적용 안됨\n",
+    "# code['graphcodebert_tokens'] = code['code'].apply(tokenizer.tokenize)\n",
+    "# for i in range(0, len(code)):\n",
+    "#   code['graphcodebert_tokens'][i] = code['graphcodebert_tokens'][i][:512]\n",
+    "\n",
+    "# code['graphcodebert_len'] = code['graphcodebert_tokens'].apply(len)\n",
+    "# code.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_q_src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_q_src= df_q_src['q_prep_text_non'].apply(tokenizer.tokenize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
