--- a/ref/code2pseudocode.ipynb
+++ b/ref/code2pseudocode.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "69a94bb6",
+   "metadata": {},
+   "source": [
+    "https://github.com/microsoft/CodeBERT/tree/master/CodeBERT/code2nl\n",
+    "\n",
+    "codebert에서 제공하는 source2pseudocode"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "96270ae4",
