--- a/ba_chatgpt/1_visualization.ipynb
+++ b/ba_chatgpt/1_visualization.ipynb
@@ -32,7 +32,19 @@
    "source": [
     "# 파일 불러오기\n",
     "with open('../../data/df_not_answered.pkl', 'rb') as f:\n",
-    "    df_not_answered = pickle.load(f)\n"
+    "    df_not_answered = pickle.load(f)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 파일 불러오기\n",
+    "with open('../../data/df_answer_tag.pkl', 'rb') as f:\n",
+    "    df_answer_tag = pickle.load(f)"
    ]
   },
   {
@@ -713,16 +725,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x3434b8be0>"
+       "<matplotlib.lines.Line2D at 0x37db2e640>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -770,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +870,7 @@
        "4                 2013-12-04  7483.0  11846.0  158.305492"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -907,6 +919,15 @@
     "\n",
     "\n",
     "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_answer_tag['q_tags_list'] = df_answer_tag['q_tags'].str.replace('><', ' ').str.replace('<', '').str.replace('>', '').str.split(' ')\n"
    ]
   },
   {
